<resources>
    <string name="app_name">BlogAppU</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="post_title">Post Title...</string>
    <string name="post_desc">Post Description...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
