<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.education.sirkel.blogappu.Activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="30dp">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:src="@drawable/logosirkel"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/loginEmail"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:background="@drawable/white_rounded_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/createAccBtn"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="13sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="5dp"/>
</LinearLayout>
